--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "purge": "if exist ..\\RTSBackend\\public\\ rd /q ..\\RTSBackend\\public\\",
+    "purge": "if exist ..\\RTSBackend\\public\\ del ..\\RTSBackend\\public\\*.* /Q rd /s /q ..\\RTSBackend\\public\\",
     "copy": "xcopy /r /s /q .\\dist ..\\RTSBackend\\public\\"
   },
   "private": true,
