--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:prod": "ng serve --prod",
+    "start:pwa": "ng build --prod && http-server -p 4200 -c-1 dist/TBSFrontend",
     "build": "ng build --prod && npm run purge && npm run copy",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,6 +26,7 @@
     "@angular/platform-browser": "~9.0.5",
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
+    "@angular/service-worker": "~9.0.5",
     "@fortawesome/angular-fontawesome": "^0.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-regular-svg-icons": "^5.12.1",
