--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start:prod": "ng serve --prod",
     "start:pwa": "ng build --prod --output-hashing none && http-server -p 4200 -c-1 dist/TBSFrontend",
     "build": "ng build --prod --output-hashing none && npm run purge && npm run copy",
+    "build:push": "npm run build && cd ..\\TBSBackend && npm run push",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
