--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "phaser": "^3.54.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
