added oboe.js to stream regions

--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.0.0",
+    "@types/oboe": "^2.1.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
+    "oboe": "^2.1.5",
     "phaser": "^3.54.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
