--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "odysseyfrontend",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --disableHostCheck",
-    "start:prod": "ng serve --prod --host 0.0.0.0 --disableHostCheck",
-    "start:pwa": "ng build --prod --output-hashing none && http-server -p 4200 -c-1 dist/OdysseyFrontend",
-    "build": "ng build --prod --output-hashing none && npm run purge && npm run copy",
-    "build:push": "npm run build && cd ..\\OdysseyBackend && npm run push",
+    "start": "ng serve -c development --host 0.0.0.0 --disableHostCheck",
+    "start:prod": "ng serve -c production --host 0.0.0.0 --disableHostCheck",
+    "start:pwa": "ng build -c production --output-hashing none && http-server -p 4200 -c-1 dist/OdysseyFrontend",
+    "build": "ng build -c production --output-hashing none && npm run purge && npm run copy",
+    "build:push": "npm version patch && npm run build && cd ..\\OdysseyBackend && npm run push",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
