--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "odysseyfrontend",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "scripts": {
     "start": "ng serve -c development --host 0.0.0.0 --disable-host-check --poll 200",
-    "build": "ng build -c production"
+    "build": "ng build -c production",
+    "eslint": "npx eslint . --ext .ts",
+    "pretest": "npm install",
+    "test": "npm run eslint",
+    "preversion": "npm run test",
+    "version": "",
+    "postversion": "git push"
   },
   "private": true,
   "author": "David Diener",
@@ -39,9 +45,16 @@
     "@angular/compiler-cli": "~11.2.7",
     "@angular/language-service": "~11.2.7",
     "@types/node": "^12.11.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "codelyzer": "^6.0.1",
+    "eslint": "^7.25.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.3",
     "typescript": "~4.1.5"
   }
 }
