--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,31 @@
 events{}
 http {
     include /etc/nginx/mime.types;
+
+     upstream websocket{
+        server OdysseyBackend:3000; 
+    }
+    
     server {
         listen 80;
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
+
         location / {
             try_files $uri $uri/ /index.html;
             proxy_intercept_errors on;
             error_page 404 = /about;
         }
         location /api {
-            proxy_pass http://OdysseyBackend:3000;
+            proxy_pass http://OdysseyBackend:3000/api;
+        }
+
+         location /ws {
+                proxy_pass http://websocket/ws;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "Upgrade";
         }
     }
 }
