modified nginx for wordpress integration

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,18 @@ http {
      upstream websocket{
         server OdysseyBackend:3000; 
     }
+
+    server {
+    listen 80 default_server;
+
+    server_name _;
+
+    return 410;
+    }
     
     server {
         listen 80;
-        server_name localhost;
+        server_name odyssey.bitnight.net;
         root /usr/share/nginx/html;
         index index.html;
 
@@ -26,6 +34,16 @@ http {
                 proxy_http_version 1.1;
                 proxy_set_header Upgrade $http_upgrade;
                 proxy_set_header Connection "Upgrade";
+        }
+    }
+
+    server {
+        listen 80;
+
+        server_name bitnight.net;
+
+        location / {
+            proxy_pass http://wordpress:8080;
         }
     }
 }
