modified nginx for wordpress integration

--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
     server {
         listen 80;
 
-        server_name bitnight.net;
+        server_name default_server;
 
         location / {
             proxy_pass http://wordpress:8080;
