--- a/nginx.conf
+++ b/nginx.conf
@@ -2,16 +2,13 @@ events{}
 http {
     include /etc/nginx/mime.types;
 
-     upstream websocket{
-        server OdysseyBackend:3000; 
-    }
-
     server {
-    listen 80 default_server;
-
-    server_name _;
-
-    return 410;
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name bitnight.net;
+         location / {
+            proxy_pass http://wordpress:8080;
+        }
     }
     
     server {
@@ -26,24 +23,8 @@ http {
             error_page 404 = /about;
         }
         location /api {
-            proxy_pass http://OdysseyBackend:3000/api;
-        }
-
-         location /ws {
-                proxy_pass http://websocket/ws;
-                proxy_http_version 1.1;
-                proxy_set_header Upgrade $http_upgrade;
-                proxy_set_header Connection "Upgrade";
+            proxy_pass http://odysseybackend:3000/api;
         }
     }
 
-    server {
-        listen 80;
-
-        server_name default_server;
-
-        location / {
-            proxy_pass http://wordpress:8080;
-        }
-    }
 }
