--- a/nginx.conf
+++ b/nginx.conf
@@ -5,9 +5,15 @@ http {
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
-        server_name bitnight.net;
+        root /usr/share/nginx/html;
+        server_name bitnight.net www.bitnight.net;
          location / {
             proxy_pass http://wordpress:8080;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Forwarded-Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
     
