--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,7 @@ http {
     include /etc/nginx/mime.types;
 
     server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
+        listen 0.0.0.0:80;
         root /usr/share/nginx/html;
         server_name bitnight.net www.bitnight.net;
          location / {
