--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,7 @@ http {
 
     server {
         listen 0.0.0.0:80;
-        root /usr/share/nginx/html;
-        server_name bitnight.net www.bitnight.net;
+        server_name bitnight.net;
          location / {
             proxy_pass http://wordpress:8080;
             proxy_set_header Host $http_host;
