--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ http {
 
     server {
         listen 8001;
-        server_name odyssey.bitnight.net;
+        server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
 
@@ -17,5 +17,4 @@ http {
             proxy_pass http://odysseybackend:3000/api;
         }
     }
-
 }
