updated to new domain

--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
             error_page 404 = /about;
         }
         location /api {
-            proxy_pass http://odysseybackend:3000/api;
+            proxy_pass https://api.daviddiener.de/api;
         }
     }
 }
