--- a/nginx.conf
+++ b/nginx.conf
@@ -13,5 +13,8 @@ http {
             proxy_intercept_errors on;
             error_page 404 = /about;
         }
+        location /api {
+            proxy_pass https://api.daviddiener.de/api;
+        }
     }
 }
