try to fix reverse proxy

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,7 @@ http {
         }
         location /api {
             proxy_pass https://api.daviddiener.de/api;
+            proxy_redirect off;
         }
     }
 }
